--- a/style.css
+++ b/style.css
@@ -3,6 +3,9 @@
   margin: 0;
   box-sizing: border-box;
 }
+html{
+  font-family:Roboto, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI',  Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
 li{
   list-style: none;
 }
@@ -30,6 +33,8 @@ a{
 
 .header .list .item{
   padding: 6px 24px;
+  border-top: solid transparent 1px;
+  border-bottom: solid transparent 1px;
 }
 
 .header .list .item:hover{
