--- a/style.css
+++ b/style.css
@@ -36,6 +36,8 @@ a{
 .banner .text .subtitle{
   font-weight: bold;
   font-size: 3rem;
+  color: black;
+  font-weight: bold;
 }
 
 .banner .text .numbers{
