--- a/style.css
+++ b/style.css
@@ -65,3 +65,8 @@ a{
   margin-top: 78px;
   width: 60%;
 }
+
+.section.-description .container .column-text .button-link:hover{
+  background-color: rgb(223, 223, 223); 
+  transition: 0.4S;
+}
