--- a/style.css
+++ b/style.css
@@ -349,3 +349,42 @@ a{
   font-weight: lighter;
   text-align: center;
 }
+
+.title{
+  font-size: 3rem;
+  font-weight: lighter;
+  color: var(--gray);
+}
+
+.subtitle{
+  font-size: 3rem;
+  font-weight: bold;
+  color: var(--black);
+}
+
+.image-project .image{
+  width: 100%;
+  height: 500px;
+  margin-bottom: 24px;
+  margin-top: 40px;
+}
+
+.text-project .container{
+  display: grid;
+  grid-template-columns: 1.5fr 2fr;
+  gap: 24px;
+}
+
+.text-project .container .image{
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.text-project .container .text{
+  font-size: 1.2rem;
+  font-weight: lighter;
+}
+
+.layout .container .image{
+  width: 100%;
+}
