--- a/style.css
+++ b/style.css
@@ -349,3 +349,20 @@ a{
   font-weight: lighter;
   text-align: center;
 }
+
+.title{
+  font-size: 3rem;
+  font-weight: lighter;
+  color: var(--gray);
+}
+
+.subtitle{
+  font-size: 3rem;
+  font-weight: bold;
+  color: var(--black);
+}
+
+.certification .container .title{
+  margin-top: 60px;
+  margin-bottom: 400px;
+}
